S302T300-109 ?fix ?pair[rog19, mbi47] #time 30m fix bootstrap styles
- Pushing bootstrap version up broke custom button styles
- Profile page was too narrow on small devices

--- a/frontend/src/styles/bootstrap_modifications.scss
+++ b/frontend/src/styles/bootstrap_modifications.scss
@@ -91,7 +91,7 @@ This is a modification of btn-outline since it is hard to read with the gradient
 }
 
 @each $color, $value in $theme-colors {
-  .btn-white-bg-#{$color} {
+  .btn.btn-white-bg-#{$color} {
     @include button-white-bg-variant($value, #fff);
   }
 }
